# case_antaq_de

./: .env-example  .flake8  README.md  pyproject.toml
airflow/: .env-example  .gitignore  Dockerfile  docker-compose.override.yml  requirements.txt
airflow/dags/: antaq__atracacao_monthly_dag.py  antaq__cargas_monthly_dag.py  antaq__gold_to_db_dag.py  antaq__instalacao_monthly_dag.py  antaq__mercadoria_monthly_dag.py  antaq__taxa_monthly_dag.py  antaq__tempos_monthly_dag.py  antaq_crawler_dag.py  bronze_antaq__atracacao_dag.py  bronze_antaq__carga_dag.py  bronze_antaq__instalacao_dag.py  bronze_antaq__mercadoria_dag.py  bronze_antaq__taxa_dag.py  bronze_antaq__tempo_dag.py  exampledag.py  gold_antaq__atracacao_dag.py  gold_antaq__carga_conteinerizada.py  gold_antaq__carga_dag.py  gold_antaq__carga_hidrovia_dag.py  gold_antaq__carga_regiao_dag.py  gold_antaq__carga_rio_dag.py  gold_antaq__instalacao_destino_dag.py  gold_antaq__instalacao_origem_dag.py  gold_antaq__mercadoria_dag.py  gold_antaq__mercadoriaconteinerizada_dag.py  gold_antaq__taxaocupacao_dag.py  gold_antaq__taxaocupacaocomcarga_dag.py  gold_antaq__taxaocupacaotoatracacao_dag.py  gold_antaq__temposatracacao_dag.py  gold_antaq__temposatracacaoparalisacao_dag.py  silver_antaq__atracacao_dag.py  silver_antaq__carga_conteinerizada.py  silver_antaq__carga_dag.py  silver_antaq__carga_hidrovia_dag.py  (+11 more)
docker/: docker-compose.yml
local_workspace/: run_all_pipe.sh  run_all_services.sh  run_bronze_pipelines.sh  run_crawler.sh  run_gold_pipelines.sh  run_gold_to_db.sh  run_silver_pipelines.sh
(+49 files in other folders)
